--- a/pages/components/Footer.module.scss
+++ b/pages/components/Footer.module.scss
@@ -6,10 +6,10 @@
     bottom: 0px;
     left: 0px;
     width: 100%;
-    max-height: 120px;
+    height: 120px;
     background-color: $background-color-dark;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 1fr 2fr 1fr;
     grid-template-rows: 2fr 1fr;
     align-items: center;
     justify-items: center;
