--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -1,5 +1,4 @@
 .container {
-  min-height: 100vh;
   display: grid;
   grid-template-areas: 
     "header"
